2003-12-19  James E Wilson  <wilson@specifixinc.com>

	* install.texi (ia64-*-linux): Document minimum libunwind version
	number.

2003-12-19  Per Bothner  <per@bothner.com>

	* langhooks.c (lhd_print_error_function):  Fix for PR c/13110.
	Don't do pp_newline; it causes an extra blank line.
	* pretty-print.c (pp_base_flush):  Clear pp_needs_newline.

2003-12-19  Jason Merrill  <jason@redhat.com>

	* tree.c (get_unwidened): Decide whether to narrow a bitfield
	reference based on TYPE_SIZE, not TYPE_PRECISION.

	* stmt.c (parse_output_constraint): Warn about in-out constraint
	that doesn't allow a register.
	(parse_input_constraint): Warn about matching constraint that
	doesn't allow a register.

2003-12-19  James E Wilson  <wilson@specifixinc.com>

	* flow.c (mark_set_regs, case PARALLEL): Scan loop forwards.
	Add case for ASM_OPERANDS.
	* global.c (global_alloc): Set regs_ever_live for regs_asm_clobbered
	registers.

2003-12-19  Kazu Hirata  <kazu@cs.umass.edu>

	* expr.c (check_max_integer_computation_mode): Remove.
	* dojump.c (do_jump): Don't use MAX_INTEGER_COMPUTATION_MODE.
	* fold-const.c (fold): Likewise.
	* system.h (MAX_INTEGER_COMPUTATION_MODE): Poison.
	* doc/tm.texi (MAX_INTEGER_COMPUTATION_MODE): Remove.

2003-12-19  James E Wilson  <wilson@specifixinc.com>

	* configure.in: Delete libunwind_has_eh_support test.
	* configure: Regenerate.
	* config.gcc (ia64*-*-linux*): Delete reference to t-libunwind-no-eh
	and libunwind_has_eh_support check.
	* config/t-libunwind-no-eh: Delete.

2003-12-19  Joseph S. Myers  <jsm@polyomino.org.uk>

	* c-format.c (print_char_table): Allow 'I' flag on floating point
	decimal formats.

2003-12-19  Stuart Hastings  <stuart@apple.com>

	* gcc/config/i386/i386.c (ix86_expand_call, x86_output_mi_thunk):
	Trivial fixes for i386.c on Darwin/x86.
	
2003-12-19  Fariborz Jahanian <fjahanian@apple.com>

        * config/rs6000/rs6000.c (legitimate_lo_sum_address_p): Add code to
        recognize macho-style lo_sum adrress patterns.