@@ -1,3 +1,7 @@
+2003-12-20  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/cast-function-1.c: New test.
+
 2003-12-19  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* gcc.dg/format/ext-1.c: Allow 'I' flag on floating point decimal
